k8s/teacher-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teacher-backend
  template:
    metadata:
      labels:
        app: teacher-backend
    spec:
      containers:
        - name: teacher-backend
          image: noakhali/school-app-teacherservice:2.0
          ports:
            - containerPort: 5002
              protocol: TCP
