k8s/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: school-frontend
  ports:
    - port: 80
      targetPort: 3000
