k8s/student-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: student-svc
spec:
  selector:
    app: student-backend
  ports:
    - port: 80
      targetPort: 5001
      protocol: TCP
