k8s/teacher-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teacher-svc
spec:
  type: ClusterIP
  selector:
    app: teacher-backend
  ports:
    - port: 80
      targetPort: 5002
      protocol: TCP
      #type: ClusterIP
