k8s/test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: school-frontend
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-frontend
  labels:
    app: school-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-frontend
  template:
    metadata:
      labels:
        app:  school-frontend
    spec:
      containers:
        - name: school-frontend
          image: noakhali/school-app-frontend:2.0
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /employeeservice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee-svc
                port:
                  number: 80

          - path: /studentservice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: student-svc
                port:
                  number: 80
          - path: /teacherservice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: teacher-svc
                port:
                  number: 80      
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
